2004-09-24  JP Rosevear  <jpr@novell.com>
 
 	Fixes #66344
 
 	* gui/e-cal-model-calendar.c (get_dtend): check for existence of
 	property and null time instead of sending through bad data
 
 	* gui/e-cal-model.c (get_dtstart): ditto
 
 	* gui/e-cal-model-tasks.c (get_completed): ditto
 	(get_due): ditto

2004-09-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #63513
	* gui/e-itip-control.c
	(ok_clicked_cb): Now the myaddress can be set to ecal address
	since ok will be sentized only when ecal is loaded.

2004-09-22  JP Rosevear  <jpr@novell.com>

	* gui/calendar-component.c (fill_popup_menu_cb): ditto

	* gui/tasks-component.c (fill_popup_menu_cb): don't allow a delete
	of the system calendar

2004-09-21  JP Rosevear  <jpr@novell.com>
 
 	Fixes #60904
 	
 	* gui/gnome-cal.c (set_week_start): update the view
 	(get_times_for_views): mimic the work week guessing code exactly
 	for calculating the time range needed instead of hardcoding 5 days
 	(set_working_days): new routine to update the view
 	(working_days_changed_cb): use above when getting config change
 	notification
 	(setup_config): set working days and add notification
	
2004-09-21  JP Rosevear  <jpr@novell.com>
 
 	Fixes #66158
 	
 	* gui/e-cal-model-tasks.c (e_cal_model_tasks_mark_task_complete):
 	notify of change so completion status updates immediately
 
2004-09-21  JP Rosevear  <jpr@novell.com>

	Fixes #59194
	
	* gui/e-cal-model-calendar.c (get_location): return "" instead of
	NULL

2004-09-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #65682
	* gui/itip-utils.c 
	(itip_send_comp): check the static capability before
	booking the deletion.

2004-09-20  JP Rosevear  <jpr@novell.com>
	
 	Fixes #55172
 	
 	* conduits/calendar/calendar-conduit.c (local_record_from_comp):
 	handle -1 (last) for monthly recurrences and check both by_set_pos
 	and by_day since either can indicate this type of recurrence
	
2004-09-20  Tony Tsui <ttsui9@gmail.com>

	Fixes #66174
